// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestTypeControlMini Should not render icon if string doesn't exist in REQUEST_TYPES enum 1`] = `
<div
  className="container"
/>
`;

exports[`RequestTypeControlMini Should work with 1 element 1`] = `
<div
  className="container"
>
  <icon-mock
    className="icon_mini "
    key="smm-0"
  />
</div>
`;

exports[`RequestTypeControlMini Should work with empty props 1`] = `
<div
  className="container"
/>
`;
